# local-document-assistant

./: README.md
MG1640_local_document_assistant/: pyproject.toml
MG1640_local_document_assistant/src/mg1640_local_document_assistant/: __init__.py
